Use fixed-height container and alignment instead of padding

--- a/app/css/components/markdown-editor.css
+++ b/app/css/components/markdown-editor.css
@@ -2,6 +2,9 @@
 
 /* editor toolbar height = 49px */
 /* 30x30[px] button + 9[px] top-bot padding + 1[px] top border = 49px */
+:root {
+    --editor-toolbar-height: 49px;
+}
 
 .c-markdown-editor {
     @screen md {
@@ -112,8 +115,8 @@
         @apply absolute;
         bottom: 0;
         right: 0;
-        @apply p-8;
-        @apply flex items-center justify-end;
+        height: var(--editor-toolbar-height);
+        @apply flex items-center justify-end mr-8;
 
         & button {
             @apply ml-12;
@@ -122,8 +125,5 @@
     }
     & .editor-preview {
         @apply bg-backgroundColorA;
-    }
-    & .scratchpad-footer {
-        @apply py-[4.5px] px-8;
     }
 }
